--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
                 <li id="auth-link"><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
-        <div id="user-header-info"></div>
+        <div id="user-header-info">
+            <span id="username"></span>
+            <span class="currency-info">
+                <img src="https://i.imgur.com/yDntrn3.png" alt="Radiant" class="currency-icon">
+                <span id="radiant-amount"></span>
+            </span>
+            <span class="currency-info">
+                <img src="https://i.imgur.com/dZIKqBx.png" alt="Fluttergems" class="currency-icon">
+                <span id="fluttergems-amount"></span>
+            </span>
+        </div>
     </header>
 
     <main>
@@ -63,43 +73,6 @@
         <p>&copy; 2024 Celestial Herds. All rights reserved.</p>
     </footer>
 
-    <script>
-        const currentUser = JSON.parse(localStorage.getItem('currentUser'));
-        const authLink = document.getElementById('auth-link');
-        const userHeaderInfo = document.getElementById('user-header-info');
-        const userInfoSection = document.getElementById('userInfo');
-
-        if (currentUser) {
-            // Update header
-            authLink.innerHTML = '<a href="profile.html">Profile</a>';
-            userHeaderInfo.innerHTML = `
-                <span>${currentUser.username}</span>
-                <span>Radiant: ${currentUser.radiant}</span>
-                <span>Fluttergems: ${currentUser.fluttergems}</span>
-            `;
-
-            // Check if the user is newly signed up
-            if (currentUser.isNewUser) {
-                userInfoSection.innerHTML = `
-                    <h3>Welcome, ${currentUser.username}!</h3>
-                    <p>We've given you 10,000 Radiant and 20 Fluttergems to get you started!</p>
-                    <p>You can check out the Market, edit your profile or read on the lore! Have fun and enjoy your stay :)</p>
-                `;
-                // Remove the isNewUser flag so this message doesn't show again
-                currentUser.isNewUser = false;
-                localStorage.setItem('currentUser', JSON.stringify(currentUser));
-            } else {
-                // Regular user info display
-                userInfoSection.innerHTML = `
-                    <h3>Welcome back, ${currentUser.username}!</h3>
-                    <p>Radiant: ${currentUser.radiant}</p>
-                    <p>Fluttergems: ${currentUser.fluttergems}</p>
-                `;
-            }
-        } else {
-            userHeaderInfo.style.display = 'none';
-            userInfoSection.style.display = 'none';
-        }
-    </script>
+    <script src="main.js"></script>
 </body>
 </html>
