--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,29 @@
 </head>
 <body>
     <header>
-        <!-- ... (header content remains the same) ... -->
+        <h1>Celestial Herds</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="market.html">Marketplace</a></li>
+                <li><a href="stable.html">My Stable</a></li>
+                <li><a href="breeding.html">Breeding</a></li>
+                <li><a href="competitions.html">Competitions</a></li>
+                <li><a href="lore.html">Lore</a></li>
+                <li id="auth-link"><a href="profile.html">Profile</a></li>
+            </ul>
+        </nav>
+        <div id="user-header-info">
+            <span id="username"></span>
+            <span class="currency-info">
+                <img src="https://i.imgur.com/yDntrn3.png" alt="Radiant" class="currency-icon">
+                <span id="radiant-amount"></span>
+            </span>
+            <span class="currency-info">
+                <img src="https://i.imgur.com/dZIKqBx.png" alt="Fluttergems" class="currency-icon">
+                <span id="fluttergems-amount"></span>
+            </span>
+        </div>
     </header>
 
     <main>
